// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildClusterUserRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "databricks_workspace:3840207185082406.6",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "3840207185082406.6",
          },
        },
      ],
      "_type": "databricks_workspace",
      "createdOn": undefined,
      "displayName": "3840207185082406.6",
      "id": "3840207185082406.6",
      "name": "3840207185082406.6",
    },
    Object {
      "_class": Array [
        "UserGroup",
      ],
      "_key": "databricks_group:admins",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "name": "admins",
          },
        },
      ],
      "_type": "databricks_group",
      "createdOn": undefined,
      "displayName": "admins",
      "name": "admins",
    },
    Object {
      "_class": Array [
        "UserGroup",
      ],
      "_key": "databricks_group:test-group-1",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "name": "test-group-1",
          },
        },
      ],
      "_type": "databricks_group",
      "createdOn": undefined,
      "displayName": "test-group-1",
      "name": "test-group-1",
    },
    Object {
      "_class": Array [
        "UserGroup",
      ],
      "_key": "databricks_group:test-group-2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "name": "test-group-2",
          },
        },
      ],
      "_type": "databricks_group",
      "createdOn": undefined,
      "displayName": "test-group-2",
      "name": "test-group-2",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "databricks_user:viragsf@gmail.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "username": "viragsf@gmail.com",
          },
        },
      ],
      "_type": "databricks_user",
      "createdOn": undefined,
      "displayName": "viragsf@gmail.com",
      "name": "viragsf@gmail.com",
      "username": "viragsf@gmail.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "databricks_user:austin.kelleher@jupiterone.dev",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "username": "austin.kelleher@jupiterone.dev",
          },
        },
      ],
      "_type": "databricks_user",
      "createdOn": undefined,
      "displayName": "austin.kelleher@jupiterone.dev",
      "name": "austin.kelleher@jupiterone.dev",
      "username": "austin.kelleher@jupiterone.dev",
    },
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "databricks_cluster:0201-183853-7c8r8974",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "autotermination_minutes": 20,
            "cluster_cores": 4,
            "cluster_id": "0201-183853-7c8r8974",
            "cluster_memory_mb": 15360,
            "cluster_name": "test-cluster",
            "cluster_source": "UI",
            "creator_user_name": "viragsf@gmail.com",
            "custom_tags": Object {
              "ResourceClass": "SingleNode",
            },
            "default_tags": Object {
              "ClusterId": "0201-183853-7c8r8974",
              "ClusterName": "test-cluster",
              "Creator": "viragsf_at_gmail.com",
              "Vendor": "Databricks",
            },
            "disk_spec": Object {},
            "driver": Object {
              "private_ip": "127.0.0.1",
            },
            "driver_instance_source": Object {
              "node_type_id": "n1-standard-4",
            },
            "driver_node_type_id": "n1-standard-4",
            "enable_elastic_disk": false,
            "enable_local_disk_encryption": false,
            "gcp_attributes": Object {
              "availability": "ON_DEMAND_GCP",
              "use_preemptible_executors": false,
              "zone_id": "HA",
            },
            "init_scripts_safe_mode": false,
            "instance_source": Object {
              "node_type_id": "n1-standard-4",
            },
            "last_state_loss_time": 1643741512861,
            "node_type_id": "n1-standard-4",
            "num_workers": 0,
            "spark_conf": Object {
              "spark.databricks.cluster.profile": "singleNode",
              "spark.master": "local[*, 4]",
            },
            "spark_context_id": 8745868079977238000,
            "spark_env_vars": Object {
              "PYSPARK_PYTHON": "/databricks/python3/bin/python3",
            },
            "spark_version": "9.1.x-scala2.12",
            "start_time": 1643740733901,
            "state": "RUNNING",
          },
        },
      ],
      "_type": "databricks_cluster",
      "active": true,
      "autoTerminationMinutes": 20,
      "createdOn": 1643740733901,
      "creator": "viragsf@gmail.com",
      "displayName": "test-cluster",
      "enableElasticDisk": false,
      "enableLocalDiskEncryption": false,
      "initScriptsSafeMode": false,
      "name": "test-cluster",
      "nodeTypeId": "n1-standard-4",
      "state": "RUNNING",
      "terminatedOn": undefined,
    },
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "databricks_cluster:0117-142331-yanks462",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "autoscale": Object {
              "max_workers": 2,
              "min_workers": 1,
            },
            "autotermination_minutes": 20,
            "cluster_id": "0117-142331-yanks462",
            "cluster_name": "test-gcp-cluster",
            "cluster_source": "UI",
            "creator_user_name": "austin.kelleher@jupiterone.dev",
            "default_tags": Object {
              "ClusterId": "0117-142331-yanks462",
              "ClusterName": "test-gcp-cluster",
              "Creator": "austin.kelleher_at_jupiterone.dev",
              "Vendor": "Databricks",
            },
            "disk_spec": Object {},
            "driver": Object {
              "private_ip": "127.0.0.1",
            },
            "driver_instance_source": Object {
              "node_type_id": "n1-standard-4",
            },
            "driver_node_type_id": "n1-standard-4",
            "enable_elastic_disk": false,
            "enable_local_disk_encryption": false,
            "gcp_attributes": Object {
              "availability": "ON_DEMAND_GCP",
              "use_preemptible_executors": false,
              "zone_id": "HA",
            },
            "init_scripts_safe_mode": false,
            "instance_source": Object {
              "node_type_id": "n1-standard-4",
            },
            "last_state_loss_time": 1642429429732,
            "node_type_id": "n1-standard-4",
            "spark_env_vars": Object {
              "PYSPARK_PYTHON": "/databricks/python3/bin/python3",
            },
            "spark_version": "9.1.x-scala2.12",
            "start_time": 1642429411156,
            "state": "TERMINATED",
            "state_message": "Cluster terminated by CLOUD_PROVIDER_LAUNCH_FAILURE",
            "terminated_time": 1642429429719,
            "termination_reason": Object {
              "code": "CLOUD_PROVIDER_LAUNCH_FAILURE",
              "parameters": Object {
                "gcp_error_message": "Compute Quota Exceeded for jupiterone-databricks-test in region us-west1: Quota: SSD_TOTAL_GB, used 0.0 and requested 1000.0 out of 500.0",
              },
              "type": "CLOUD_FAILURE",
            },
          },
        },
      ],
      "_type": "databricks_cluster",
      "active": false,
      "autoTerminationMinutes": 20,
      "createdOn": 1642429411156,
      "creator": "austin.kelleher@jupiterone.dev",
      "displayName": "test-gcp-cluster",
      "enableElasticDisk": false,
      "enableLocalDiskEncryption": false,
      "initScriptsSafeMode": false,
      "name": "test-gcp-cluster",
      "nodeTypeId": "n1-standard-4",
      "state": "TERMINATED",
      "terminatedOn": 1642429429719,
    },
  ],
  "encounteredTypes": Array [
    "databricks_workspace",
    "databricks_group",
    "databricks_workspace_has_group",
    "databricks_user",
    "databricks_group_has_user",
    "databricks_cluster",
    "databricks_workspace_has_cluster",
    "databricks_user_created_cluster",
  ],
  "numCollectedEntities": 8,
}
`;

exports[`#fetchClusters should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "databricks_workspace:3840207185082406.6",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "3840207185082406.6",
          },
        },
      ],
      "_type": "databricks_workspace",
      "createdOn": undefined,
      "displayName": "3840207185082406.6",
      "id": "3840207185082406.6",
      "name": "3840207185082406.6",
    },
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "databricks_cluster:0201-183853-7c8r8974",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "autotermination_minutes": 20,
            "cluster_cores": 4,
            "cluster_id": "0201-183853-7c8r8974",
            "cluster_memory_mb": 15360,
            "cluster_name": "test-cluster",
            "cluster_source": "UI",
            "creator_user_name": "viragsf@gmail.com",
            "custom_tags": Object {
              "ResourceClass": "SingleNode",
            },
            "default_tags": Object {
              "ClusterId": "0201-183853-7c8r8974",
              "ClusterName": "test-cluster",
              "Creator": "viragsf_at_gmail.com",
              "Vendor": "Databricks",
            },
            "disk_spec": Object {},
            "driver": Object {
              "private_ip": "127.0.0.1",
            },
            "driver_instance_source": Object {
              "node_type_id": "n1-standard-4",
            },
            "driver_node_type_id": "n1-standard-4",
            "enable_elastic_disk": false,
            "enable_local_disk_encryption": false,
            "gcp_attributes": Object {
              "availability": "ON_DEMAND_GCP",
              "use_preemptible_executors": false,
              "zone_id": "HA",
            },
            "init_scripts_safe_mode": false,
            "instance_source": Object {
              "node_type_id": "n1-standard-4",
            },
            "last_state_loss_time": 1643741512861,
            "node_type_id": "n1-standard-4",
            "num_workers": 0,
            "spark_conf": Object {
              "spark.databricks.cluster.profile": "singleNode",
              "spark.master": "local[*, 4]",
            },
            "spark_context_id": 8745868079977238000,
            "spark_env_vars": Object {
              "PYSPARK_PYTHON": "/databricks/python3/bin/python3",
            },
            "spark_version": "9.1.x-scala2.12",
            "start_time": 1643740733901,
            "state": "RUNNING",
          },
        },
      ],
      "_type": "databricks_cluster",
      "active": true,
      "autoTerminationMinutes": 20,
      "createdOn": 1643740733901,
      "creator": "viragsf@gmail.com",
      "displayName": "test-cluster",
      "enableElasticDisk": false,
      "enableLocalDiskEncryption": false,
      "initScriptsSafeMode": false,
      "name": "test-cluster",
      "nodeTypeId": "n1-standard-4",
      "state": "RUNNING",
      "terminatedOn": undefined,
    },
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "databricks_cluster:0117-142331-yanks462",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "autoscale": Object {
              "max_workers": 2,
              "min_workers": 1,
            },
            "autotermination_minutes": 20,
            "cluster_id": "0117-142331-yanks462",
            "cluster_name": "test-gcp-cluster",
            "cluster_source": "UI",
            "creator_user_name": "austin.kelleher@jupiterone.dev",
            "default_tags": Object {
              "ClusterId": "0117-142331-yanks462",
              "ClusterName": "test-gcp-cluster",
              "Creator": "austin.kelleher_at_jupiterone.dev",
              "Vendor": "Databricks",
            },
            "disk_spec": Object {},
            "driver": Object {
              "private_ip": "127.0.0.1",
            },
            "driver_instance_source": Object {
              "node_type_id": "n1-standard-4",
            },
            "driver_node_type_id": "n1-standard-4",
            "enable_elastic_disk": false,
            "enable_local_disk_encryption": false,
            "gcp_attributes": Object {
              "availability": "ON_DEMAND_GCP",
              "use_preemptible_executors": false,
              "zone_id": "HA",
            },
            "init_scripts_safe_mode": false,
            "instance_source": Object {
              "node_type_id": "n1-standard-4",
            },
            "last_state_loss_time": 1642429429732,
            "node_type_id": "n1-standard-4",
            "spark_env_vars": Object {
              "PYSPARK_PYTHON": "/databricks/python3/bin/python3",
            },
            "spark_version": "9.1.x-scala2.12",
            "start_time": 1642429411156,
            "state": "TERMINATED",
            "state_message": "Cluster terminated by CLOUD_PROVIDER_LAUNCH_FAILURE",
            "terminated_time": 1642429429719,
            "termination_reason": Object {
              "code": "CLOUD_PROVIDER_LAUNCH_FAILURE",
              "parameters": Object {
                "gcp_error_message": "Compute Quota Exceeded for jupiterone-databricks-test in region us-west1: Quota: SSD_TOTAL_GB, used 0.0 and requested 1000.0 out of 500.0",
              },
              "type": "CLOUD_FAILURE",
            },
          },
        },
      ],
      "_type": "databricks_cluster",
      "active": false,
      "autoTerminationMinutes": 20,
      "createdOn": 1642429411156,
      "creator": "austin.kelleher@jupiterone.dev",
      "displayName": "test-gcp-cluster",
      "enableElasticDisk": false,
      "enableLocalDiskEncryption": false,
      "initScriptsSafeMode": false,
      "name": "test-gcp-cluster",
      "nodeTypeId": "n1-standard-4",
      "state": "TERMINATED",
      "terminatedOn": 1642429429719,
    },
  ],
  "encounteredTypes": Array [
    "databricks_workspace",
    "databricks_cluster",
    "databricks_workspace_has_cluster",
  ],
  "numCollectedEntities": 3,
}
`;
